Fixed the Background (not visible)

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html,body{
 }
 
 body{
-    background-image: url(../img/bg2.webp);
+    background: url(../img/bg2.webp);
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
